代码已经基本修改完成, 调整配置文件数据